force-app/main/default/objects/CSA_Prioritization__c/CSA_Prioritization__c.object-meta.xml
<CustomObject>
    <label>Prioritization</label>
    <nameField>
        <label>Prioritization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prioritization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>