force-app/main/default/objects/CSA_Prioritization__c/fields/Is_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Is_Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vaccinated</label>
    <type>Checkbox</type>
</CustomField>