force-app/main/default/objects/CSA_Prioritization__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IF(Total_score__c &gt; 20,IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 30),IF(AND(Total_score__c &lt; 20, Total_score__c &gt;= 10),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 30),IF(Total_score__c &lt; 9,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;yellow&quot;, 10, 30),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>