force-app/main/default/objects/CSA_Prioritization__c/fields/Total_Criteria_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Total_Criteria_Evaluated__c</fullName>
    <label>Total Criteria Evaluated</label>
    <summaryForeignKey>CSA_Criteria_Evaluation__c.Prioritization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>