force-app/main/default/objects/CSA_Prioritization__c/fields/Total_score__c.field-meta.xml
<CustomField>
    <fullName>Total_score__c</fullName>
    <label>Total score</label>
    <summarizedField>CSA_Criteria_Evaluation__c.Score__c</summarizedField>
    <summaryFilterItems>
        <field>CSA_Criteria_Evaluation__c.Score__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>CSA_Criteria_Evaluation__c.Prioritization__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>