force-app/main/default/objects/CSA_Prioritization__c/fields/Vaccinated_Date__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated_Date__c</fullName>
    <label>Vaccinated Date</label>
    <type>Date</type>
</CustomField>