force-app/main/default/objects/CSA_Prioritization__c/fields/Vaccine_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Tracing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vaccine Tracing</label>
    <referenceTo>CSA_VaccineAssessment__c</referenceTo>
    <relationshipLabel>Prioritization</relationshipLabel>
    <relationshipName>Prioritization</relationshipName>
    <type>Lookup</type>
</CustomField>