force-app/main/default/objects/CSA_Prioritization__c/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>Contact__c</columns>
    <columns>Is_Vaccinated__c</columns>
    <columns>Total_Criteria_Evaluated__c</columns>
    <columns>Total_score__c</columns>
    <columns>Vaccinated_Date__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Contacts</label>
</ListView>